--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
     <h1>CodeJam - Palette</h1>
   </header>
   <main>
-    <aside class="control-panel">
+    <aside class="control-panel-left">
       <div class="pixel-size-panel">
-        <div class="pixel-size-panel_wrapper" data="1">
-          <div class="pixel-size-panel_pixel-1" data="1"></div>
+        <div class="pixel-size-panel__wrapper" data="1">
+          <div class="pixel-size-panel__pixel-1" data="1"></div>
         </div>
-        <div class="pixel-size-panel_wrapper"  data="2">
-          <div class="pixel-size-panel_pixel-2" data="2"></div>
+        <div class="pixel-size-panel__wrapper" data="2">
+          <div class="pixel-size-panel__pixel-2" data="2"></div>
         </div>
-        <div class="pixel-size-panel_wrapper"  data="3">
-          <div class="pixel-size-panel_pixel-3" data="3"></div>
+        <div class="pixel-size-panel__wrapper" data="3">
+          <div class="pixel-size-panel__pixel-3" data="3"></div>
         </div>
-        <div class="pixel-size-panel_wrapper"  data="4">
-          <div class="pixel-size-panel_pixel-4" data="4"></div>
+        <div class="pixel-size-panel__wrapper" data="4">
+          <div class="pixel-size-panel__pixel-4" data="4"></div>
         </div>
-        <div class="pixel-size-panel_wrapper"  data="5">
-          <div class="pixel-size-panel_pixel-5" data="5"></div>
+        <div class="pixel-size-panel__wrapper" data="5">
+          <div class="pixel-size-panel__pixel-5" data="5"></div>
         </div>
-        <div class="pixel-size-panel_wrapper"  data="6">
-          <div class="pixel-size-panel_pixel-6" data="6"></div>
+        <div class="pixel-size-panel__wrapper" data="6">
+          <div class="pixel-size-panel__pixel-6" data="6"></div>
         </div>
       </div>
       <ul class="upper-panel">
         <li class="upper-panel__item-1 upper-panel__item"><span>Pen</span></li>
         <li class="upper-panel__item-2 upper-panel__item"><span>Mirror Pen</span></li>
         <li class="upper-panel__item-3 upper-panel__item"><span>Paint Bucket</span></li>
-        <li class="upper-panel__item-4 upper-panel__item"><span>Paint all</span></li>     
+        <li class="upper-panel__item-4 upper-panel__item"><span>Paint all</span></li>
         <li class="upper-panel__item-5 upper-panel__item"><span>Eraser</span></li>
         <li class="upper-panel__item-6 upper-panel__item"><span>Stroke</span></li>
         <li class="upper-panel__item-5 upper-panel__item"><span>Rectangle</span></li>
@@ -55,27 +55,39 @@
         <li class="lower-panel__item-2 lower-panel__item">
           <div class="wrapper"><span class='name'>previous color</span></div>
         </li>
-        <li class="lower-panel__item-3 lower-panel__item">   
-         <div class="color"></div>
-         <div class="color"></div>
-         <div class="color"></div>
+        <li class="lower-panel__item-3 lower-panel__item">
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
         </li>
         <input class="lower-panel__color-picker" type="color" style="display: none">
       </ul>
     </aside>
     <div class="canvas-wrapper">
-      <canvas class = "canvas layer-main"></canvas>
-      <canvas class = "canvas layer-upper"></canvas>
+      <canvas class="canvas-layer-1"></canvas>
+      <canvas class="canvas-layer-upper"></canvas>
     </div>
-    <div class="search-box">
+    <!-- <div class="search-box">
       <input class="search-field" type="text">
       <button class="search-button" type="button">SHOW</button>
     </div>
     <div class="filters">
       <button class="button greyscale" type="button">B&W</button>
     </div>
-   <input class="canvas-size" type="range" min="1" max="3" step="1">
-    </form>
+   <input class="canvas-size" type="range" min="1" max="3" step="1"> -->
+    <div class="control-panel-right">
+      <div class="layers-panel">
+        <div class="layers-panel__control">
+          <button class="button-add-layer" type="button"> Добивать слой</button>
+          <button class="button-up-layer">up</button>
+          <button class="button-down-layer">down</button>
+          <button class="button-delete-layer">del</button>
+        </div>
+        <div class="layers-panel__layers-list">
+          <div class="list-layer-1 list-layer">layer-1</div>
+        </div>
+      </div>
+    </div>
     </div>
   </main>
   <script src="./js/main.js" type="module"></script>
