feat: add layers change name and merge functionality

--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
       <div class="layers-panel">
         <div class="layers-panel__control">
           <button class="button-add-layer" type="button"> Добивать слой</button>
-          <button class="button-up-layer">up</button>
-          <button class="button-down-layer">down</button>
-          <button class="button-delete-layer">del</button>
+          <button class="button-change-name" type="button">CN</button>
+          <button class="button-up-layer" type="button">up</button>
+          <button class="button-down-layer" type="button">down</button>
+          <button class="button-merge-layer" type="button">MG</button>
+          <button class="button-delete-layer" type="button">del</button>
         </div>
-        <div class="layers-panel__layers-list">
-          <div class="list-layer-1 list-layer">layer-1</div>
-        </div>
+        <ul class="layers-panel__layers-list">
+          <li class="list-layer-1 list-layer">layer-1</li>
+        </ul>
       </div>
     </div>
     </div>
