--- a/index.html
+++ b/index.html
@@ -12,86 +12,92 @@
 </head>
 
 <body>
-  <header>
-    <ul class="menu"></ul>
-    <h1>CodeJam - Palette</h1>
-  </header>
-  <main>
-    <aside class="control-panel-left">
-      <div class="pixel-size-panel">
-        <div class="pixel-size-panel__wrapper" data="1">
-          <div class="pixel-size-panel__pixel-1" data="1"></div>
+  <div class="page-wrapper">
+    <header>
+      <ul class="menu"></ul>
+      <h1>CodeJam - Palette</h1>
+    </header>
+    <main>
+      <aside class="control-panel-left">
+        <div class="pixel-size-panel">
+          <div class="pixel-size-panel__wrapper" data="1">
+            <div class="pixel-size-panel__pixel-1" data="1"></div>
+          </div>
+          <div class="pixel-size-panel__wrapper" data="2">
+            <div class="pixel-size-panel__pixel-2" data="2"></div>
+          </div>
+          <div class="pixel-size-panel__wrapper" data="3">
+            <div class="pixel-size-panel__pixel-3" data="3"></div>
+          </div>
+          <div class="pixel-size-panel__wrapper" data="4">
+            <div class="pixel-size-panel__pixel-4" data="4"></div>
+          </div>
+          <div class="pixel-size-panel__wrapper" data="5">
+            <div class="pixel-size-panel__pixel-5" data="5"></div>
+          </div>
+          <div class="pixel-size-panel__wrapper" data="6">
+            <div class="pixel-size-panel__pixel-6" data="6"></div>
+          </div>
         </div>
-        <div class="pixel-size-panel__wrapper" data="2">
-          <div class="pixel-size-panel__pixel-2" data="2"></div>
-        </div>
-        <div class="pixel-size-panel__wrapper" data="3">
-          <div class="pixel-size-panel__pixel-3" data="3"></div>
-        </div>
-        <div class="pixel-size-panel__wrapper" data="4">
-          <div class="pixel-size-panel__pixel-4" data="4"></div>
-        </div>
-        <div class="pixel-size-panel__wrapper" data="5">
-          <div class="pixel-size-panel__pixel-5" data="5"></div>
-        </div>
-        <div class="pixel-size-panel__wrapper" data="6">
-          <div class="pixel-size-panel__pixel-6" data="6"></div>
-        </div>
-      </div>
-      <ul class="upper-panel">
-        <li class="upper-panel__item-1 upper-panel__item"><span>Pen</span></li>
-        <li class="upper-panel__item-2 upper-panel__item"><span>Mirror Pen</span></li>
-        <li class="upper-panel__item-3 upper-panel__item"><span>Paint Bucket</span></li>
-        <li class="upper-panel__item-4 upper-panel__item"><span>Paint all</span></li>
-        <li class="upper-panel__item-5 upper-panel__item"><span>Eraser</span></li>
-        <li class="upper-panel__item-6 upper-panel__item"><span>Stroke</span></li>
-        <li class="upper-panel__item-5 upper-panel__item"><span>Rectangle</span></li>
-        <li class="upper-panel__item-5 upper-panel__item"><span>Circle</span></li>
-      </ul>
-      <ul class="lower-panel">
-        <li class="lower-panel__item-1 lower-panel__item">
-          <div class="wrapper"><span class='name'>current color</span></div>
-        </li>
-        <li class="lower-panel__item-2 lower-panel__item">
-          <div class="wrapper"><span class='name'>previous color</span></div>
-        </li>
-        <li class="lower-panel__item-3 lower-panel__item">
-          <div class="color"></div>
-          <div class="color"></div>
-          <div class="color"></div>
-        </li>
-        <input class="lower-panel__color-picker" type="color" style="display: none">
-      </ul>
-    </aside>
-    <div class="canvas-wrapper">
-      <canvas class="canvas-layer-1"></canvas>
-      <canvas class="canvas-layer-upper"></canvas>
-    </div>
-    <!-- <div class="search-box">
-      <input class="search-field" type="text">
-      <button class="search-button" type="button">SHOW</button>
-    </div>
-    <div class="filters">
-      <button class="button greyscale" type="button">B&W</button>
-    </div>
-   <input class="canvas-size" type="range" min="1" max="3" step="1"> -->
-    <div class="control-panel-right">
-      <div class="layers-panel">
-        <div class="layers-panel__control">
-          <button class="button-add-layer" type="button"> Добивать слой</button>
-          <button class="button-change-name" type="button">CN</button>
-          <button class="button-up-layer" type="button">up</button>
-          <button class="button-down-layer" type="button">down</button>
-          <button class="button-merge-layer" type="button">MG</button>
-          <button class="button-delete-layer" type="button">del</button>
-        </div>
-        <ul class="layers-panel__layers-list">
-          <li class="list-layer-1 list-layer">layer-1</li>
+        <ul class="upper-panel">
+          <li class="upper-panel__item-1 upper-panel__item"><span>Pen</span></li>
+          <li class="upper-panel__item-2 upper-panel__item"><span>Mirror Pen</span></li>
+          <li class="upper-panel__item-3 upper-panel__item"><span>Paint Bucket</span></li>
+          <li class="upper-panel__item-4 upper-panel__item"><span>Paint all</span></li>
+          <li class="upper-panel__item-5 upper-panel__item"><span>Eraser</span></li>
+          <li class="upper-panel__item-6 upper-panel__item"><span>Stroke</span></li>
+          <li class="upper-panel__item-5 upper-panel__item"><span>Rectangle</span></li>
+          <li class="upper-panel__item-5 upper-panel__item"><span>Circle</span></li>
         </ul>
+        <ul class="lower-panel">
+          <li class="lower-panel__item-1 lower-panel__item">
+            <div class="wrapper"><span class='name'>current color</span></div>
+          </li>
+          <li class="lower-panel__item-2 lower-panel__item">
+            <div class="wrapper"><span class='name'>previous color</span></div>
+          </li>
+          <li class="lower-panel__item-3 lower-panel__item">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+          </li>
+          <input class="lower-panel__color-picker" type="color" style="display: none">
+        </ul>
+      </aside>
+      <div class="canvas-base">
+        <div class="canvas-wrapper">
+          <canvas class="canvas-layer-1"></canvas>
+          <canvas class="canvas-layer-upper"></canvas>
+        </div>
       </div>
-    </div>
-    </div>
+      <!-- <div class="search-box">
+        <input class="search-field" type="text">
+        <button class="search-button" type="button">SHOW</button>
+      </div>
+      <div class="filters">
+        <button class="button greyscale" type="button">B&W</button>
+      </div>
+     <input class="canvas-size" type="range" min="1" max="3" step="1"> -->
+      <div class="control-panel-right">
+        <div class="layers-panel">
+          <div class="layers-panel__control">
+            <button class="button-add-layer" type="button"> Добивать слой</button>
+            <button class="button-change-name" type="button">CN</button>
+            <button class="button-up-layer" type="button">up</button>
+            <button class="button-down-layer" type="button">down</button>
+            <button class="button-merge-layer" type="button">MG</button>
+            <button class="button-delete-layer" type="button">del</button>
+          </div>
+          <ul class="layers-panel__layers-list">
+            <li class="list-layer-1 list-layer">layer-1</li>
+          </ul>
+        </div>
+        <button class='button-canvas-size' type='button'>size</button>
+      </div>
+  </div>
   </main>
+  </div>
+
   <script src="./js/main.js" type="module"></script>
 </body>
 
