fix: in setCanvasWrapperSize func and html/css

--- a/index.html
+++ b/index.html
@@ -57,16 +57,13 @@
             <div class="wrapper"><span class='name'>previous color</span></div>
           </li>
           <li class="lower-panel__item-3 lower-panel__item">
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
           </li>
           <input class="lower-panel__color-picker" type="color" style="display: none">
         </ul>
       </aside>
       <div class="canvas-base">
         <div class="canvas-wrapper">
-          <canvas class="canvas-layer-1"></canvas>
+          <canvas class="canvas-layer canvas-layer-1"></canvas>
           <canvas class="canvas-layer-upper"></canvas>
         </div>
       </div>
@@ -94,10 +91,8 @@
         </div>
         <button class='button-canvas-size' type='button'>size</button>
       </div>
+    </main>
   </div>
-  </main>
-  </div>
-
   <script src="./js/main.js" type="module"></script>
 </body>
 
