feat: canvas adaptaion for window size and set canvas size functionality

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
             <li class="list-layer-1 list-layer">layer-1</li>
           </ul>
         </div>
-        <button class='button-canvas-size' type='button'>size</button>
+        <div class="canvas-size-wrapper">
+          <button class='button-submit' type='button'>size</button>
+          <input class="canvas-width-input" type="text">
+          <input class="canvas-height-input" type="text">
+        </div>    
+        <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
       </div>
     </main>
   </div>
