feat: add tools manager and paint bucket tool

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           </div>
         </div>
         <ul class="upper-panel">
-          <li class="upper-panel__item-1 upper-panel__item"><span>Pen</span></li>
-          <li class="upper-panel__item-2 upper-panel__item"><span>Mirror Pen</span></li>
-          <li class="upper-panel__item-3 upper-panel__item"><span>Paint Bucket</span></li>
-          <li class="upper-panel__item-4 upper-panel__item"><span>Paint all</span></li>
-          <li class="upper-panel__item-5 upper-panel__item"><span>Eraser</span></li>
-          <li class="upper-panel__item-6 upper-panel__item"><span>Stroke</span></li>
-          <li class="upper-panel__item-5 upper-panel__item"><span>Rectangle</span></li>
-          <li class="upper-panel__item-5 upper-panel__item"><span>Circle</span></li>
+          <li class="upper-panel__item-1 upper-panel__item" id = "isPen"><span>Pen</span></li>
+          <li class="upper-panel__item-2 upper-panel__item" id = "isMirrorPen"><span>Mirror Pen</span></li>
+          <li class="upper-panel__item-3 upper-panel__item" id = "isPaintBucket"><span>Paint Bucket</span></li>
+          <li class="upper-panel__item-4 upper-panel__item" id = "isPaintAll"><span>Paint all</span></li>
+          <li class="upper-panel__item-5 upper-panel__item" id = "isEraser"><span>Eraser</span></li>
+          <li class="upper-panel__item-6 upper-panel__item" id = "isStroke"><span>Stroke</span></li>
+          <li class="upper-panel__item-5 upper-panel__item" id = "isRecktangle"><span>Rectangle</span></li>
+          <li class="upper-panel__item-5 upper-panel__item" id = "isCircle"><span>Circle</span></li>
         </ul>
         <ul class="lower-panel">
           <li class="lower-panel__item-1 lower-panel__item">
@@ -93,7 +93,7 @@
           <button class='button-submit' type='button'>size</button>
           <input class="canvas-width-input" type="text">
           <input class="canvas-height-input" type="text">
-        </div>    
+        </div>
         <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
       </div>
     </main>
