feat: add circle and line tools

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <li class="upper-panel__item-3 upper-panel__item" id = "isPaintBucket"><span>Paint Bucket</span></li>
           <li class="upper-panel__item-4 upper-panel__item" id = "isPaintAll"><span>Paint all</span></li>
           <li class="upper-panel__item-5 upper-panel__item" id = "isEraser"><span>Eraser</span></li>
-          <li class="upper-panel__item-6 upper-panel__item" id = "isStroke"><span>Stroke</span></li>
-          <li class="upper-panel__item-5 upper-panel__item" id = "isRecktangle"><span>Rectangle</span></li>
+          <li class="upper-panel__item-6 upper-panel__item" id = "isLine"><span>Stroke</span></li>
+          <li class="upper-panel__item-5 upper-panel__item" id = "isRectangle"><span>Rectangle</span></li>
           <li class="upper-panel__item-5 upper-panel__item" id = "isCircle"><span>Circle</span></li>
         </ul>
         <ul class="lower-panel">
