fix: canvas sizing

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="upper-panel__item-3 upper-panel__item" id = "isPaintBucket"><span>Paint Bucket</span></li>
           <li class="upper-panel__item-4 upper-panel__item" id = "isPaintAll"><span>Paint all</span></li>
           <li class="upper-panel__item-5 upper-panel__item" id = "isEraser"><span>Eraser</span></li>
-          <li class="upper-panel__item-6 upper-panel__item" id = "isLine"><span>Stroke</span></li>
+          <li class="upper-panel__item-6 upper-panel__item" id = "isLine"><span>Line</span></li>
           <li class="upper-panel__item-5 upper-panel__item" id = "isRectangle"><span>Rectangle</span></li>
           <li class="upper-panel__item-5 upper-panel__item" id = "isCircle"><span>Circle</span></li>
         </ul>
@@ -91,8 +91,8 @@
         </div>
         <div class="canvas-size-wrapper">
           <button class='button-submit' type='button'>size</button>
-          <input class="canvas-width-input" type="text">
-          <input class="canvas-height-input" type="text">
+          <input class="canvas-width-input" type="text" value = '50'>
+          <input class="canvas-height-input" type="text" value = '50'>
         </div>
         <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
       </div>
