feat: add animation manager

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       </div>
      <input class="canvas-size" type="range" min="1" max="3" step="1"> -->
       <div class="control-panel-right">
+        <div class="animation-wrapper">
+          <img class="animation-wrapper__monitor">
+          <div class="animation-wrapper__control-panel"></div>
+        </div>
         <div class="layers-panel">
           <div class="layers-panel__control">
             <button class="button-add-layer" type="button"> Добивать слой</button>
