--- a/index.html
+++ b/index.html
@@ -110,6 +110,43 @@
         </div>
         <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
       </div>
+      <div class="aside-panel">
+        <div class="aside-panel__main-wrapper">
+          <div class="aside-panel__icon-wrapper">
+            <div class="icon-background">
+              <div class="icon icon-save"></div>
+            </div>
+            <div class="icon-background">
+              <div class="icon icon-import"></div>
+            </div>
+            <div class="icon-background">
+            </div>
+          </div>
+          <div class="aside-panel__operating-wrapper">
+            <div class="aside-panel__save-operating aside-panel__operating">
+              <div class="range-input-wrapper">
+                <span class="multiplier"></span>
+                <input class='range' type="range" min="1" max="30" step="1">
+              </div>
+              <div class="resolution">
+                <div class="text">Resolution</div>
+                <input class="width" type="text">
+                <div class="label">x</div>
+                <input class="height" type="text">
+              </div>
+              <div class="file-format-wrapper">
+                <span class="text">Save as: </span>
+                <input class='files-name' type="text">
+                <div class="buttons-wrapper">
+                  <button class="image" type="button">.png</button>
+                  <button class="gif" type="button">.gif</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </main>
   </div>
   <script src="./js/main.js" type="module"></script>
