--- a/index.html
+++ b/index.html
@@ -2,172 +2,180 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <title>Document</title>
-  <link rel="stylesheet/less" href="./lib/index.less">
-  <script src="./lib/less/less.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <title>Document</title>
+    <link rel="stylesheet/less" href="./css/index.less">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
+    <script src="./lib/less/less.min.js"></script>
 </head>
 
 <body>
-  <div class="page-wrapper">
-    <header>
-      <ul class="menu"></ul>
-      <h1>CodeJam - Palette</h1>
-    </header>
-    <main>
-      <div class="control-panel-left">
-        <div class="pixel-size-panel">
-          <div class="pixel-size-panel__wrapper" data="1">
-            <div class="pixel-size-panel__pixel-1" data="1"></div>
-          </div>
-          <div class="pixel-size-panel__wrapper" data="2">
-            <div class="pixel-size-panel__pixel-2" data="2"></div>
-          </div>
-          <div class="pixel-size-panel__wrapper" data="3">
-            <div class="pixel-size-panel__pixel-3" data="3"></div>
-          </div>
-          <div class="pixel-size-panel__wrapper" data="4">
-            <div class="pixel-size-panel__pixel-4" data="4"></div>
-          </div>
-          <div class="pixel-size-panel__wrapper" data="5">
-            <div class="pixel-size-panel__pixel-5" data="5"></div>
-          </div>
-          <div class="pixel-size-panel__wrapper" data="6">
-            <div class="pixel-size-panel__pixel-6" data="6"></div>
-          </div>
-        </div>
-        <ul class="upper-panel">
-          <li class="upper-panel__item-1 upper-panel__item" id="isPen"><span>Pen</span></li>
-          <li class="upper-panel__item-2 upper-panel__item" id="isMirrorPen"><span>Mirror Pen</span></li>
-          <li class="upper-panel__item-3 upper-panel__item" id="isPaintBucket"><span>Paint Bucket</span></li>
-          <li class="upper-panel__item-4 upper-panel__item" id="isPaintAll"><span>Paint all</span></li>
-          <li class="upper-panel__item-5 upper-panel__item" id="isEraser"><span>Eraser</span></li>
-          <li class="upper-panel__item-6 upper-panel__item" id="isLine"><span>Line</span></li>
-          <li class="upper-panel__item-7 upper-panel__item" id="isRectangle"><span>Rectangle</span></li>
-          <li class="upper-panel__item-8 upper-panel__item" id="isCircle"><span>Circle</span></li>
-        </ul>
-        <ul class="lower-panel">
-          <li class="lower-panel__item-1 lower-panel__item">
-            <div class="wrapper"><span class='name'>current color</span></div>
-          </li>
-          <li class="lower-panel__item-2 lower-panel__item">
-            <div class="wrapper"><span class='name'>previous color</span></div>
-          </li>
-          <li class="lower-panel__item-3 lower-panel__item">
-          </li>
-          <input class="lower-panel__color-picker" type="color" style="display: none">
-        </ul>
-      </div>
-      <div class="control-panel-frame">
-        <div class="frame-column"></div>
-        <button class="button-add-frame" type='button'>Add new frame</button>
-      </div>
-      <div class="canvas-base">
-        <div class="canvas-wrapper">
-          <canvas class="canvas-layer canvas-layer-1 canvas"></canvas>
-          <canvas class="canvas-layer-upper canvas"></canvas>
-        </div>
-      </div>
-      <!-- <div class="search-box">
-        <input class="search-field" type="text">
-        <button class="search-button" type="button">SHOW</button>
-      </div>
-      <div class="filters">
-        <button class="button greyscale" type="button">B&W</button>
-      </div>
-     <input class="canvas-size" type="range" min="1" max="3" step="1"> -->
-      <div class="control-panel-right">
-        <div class="animation-wrapper">
-          <div class="animation-wrapper__monitor-wrapper">
-            <img class="animation-wrapper__monitor">
-          </div>
-          <div class="animation-wrapper__control-panel">
-            <span class="animation-wrapper__fps-monitor"></span>
-            <input class="animation-wrapper__fps-slider" type="range" min="0" max="24" step="1">
-          </div>
-        </div>
-        <div class="layers-panel">
-          <div class="layers-panel__control">
-            <button class="button-add-layer" type="button"> Добивать слой</button>
-            <button class="button-change-name" type="button">CN</button>
-            <button class="button-up-layer" type="button">up</button>
-            <button class="button-down-layer" type="button">down</button>
-            <button class="button-merge-layer" type="button">MG</button>
-            <button class="button-delete-layer" type="button">del</button>
-          </div>
-          <ul class="layers-panel__layers-list">
-            <li class="list-layer-1 list-layer">layer-1</li>
-          </ul>
-          <!-- <button  class="button-animation" type="button">run animation</button>-->
-        </div>
-        <div class="canvas-size-wrapper">
-          <button class='button-submit' type='button'>size:</button>
-          <input class="canvas-width-input" type="text">
-          <input class="canvas-height-input" type="text">
-        </div>
-        <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
-      </div>
-      <div class="aside-panel">
-        <div class="aside-panel__main-wrapper">
-          <div class="aside-panel__icon-wrapper">
-            <div class="icon-background">
-              <div class="icon icon-save"></div>
-            </div>
-            <div class="icon-background">
-              <div class="icon icon-import"></div>
-            </div>
-            <div class="icon-background">
-            </div>
-          </div>
-          <div class="aside-panel__operating-wrapper">
-            <div class="aside-panel__save-operating aside-panel__operating">
-              <div class="range-input-wrapper">
-                <span>scale</span>
-                <input class='range' type="range" min="1" max="30" step="1">
-                <span class="multiplier"></span>
-              </div>
-              <div class="resolution">
-                <div class="text">Resolution</div>
-                <input class="width" type="text">
-                <div class="label">x</div>
-                <input class="height" type="text">
-              </div>
-              <div class="file-format-wrapper">
-                <span class="text">Save as: </span>
-                <input class='files-name' type="text">
-                <div class="buttons-wrapper">
-                  <div class="inner">
-                    <div class="image"></div>
-                    <button class="button-save-image" type="button">.png</button>
-                  </div>
-                 <div class="inner">
-                   <div class="gif"></div>
-                  <button class="button-save-gif" type="button">.gif</button>
-                 </div>               
+    <div class="box"></div>
+    <div class="page-wrapper">
+        <header>
+            <ul class="menu"></ul>
+            <h1>CodeJam - Palette</h1>
+        </header>
+        <main>
+            <!-- Tools and colors -->
+            <div class="control-panel-left">
+                <!-- Choose pixel size -->
+                <div class="pixel-size-panel">
+                    <div class="pixel-size-panel__wrapper" data="1">
+                        <div class="pixel-size-panel__pixel-1" data="1"></div>
+                    </div>
+                    <div class="pixel-size-panel__wrapper" data="2">
+                        <div class="pixel-size-panel__pixel-2" data="2"></div>
+                    </div>
+                    <div class="pixel-size-panel__wrapper" data="3">
+                        <div class="pixel-size-panel__pixel-3" data="3"></div>
+                    </div>
+                    <div class="pixel-size-panel__wrapper" data="4">
+                        <div class="pixel-size-panel__pixel-4" data="4"></div>
+                    </div>
+                    <div class="pixel-size-panel__wrapper" data="5">
+                        <div class="pixel-size-panel__pixel-5" data="5"></div>
+                    </div>
+                    <div class="pixel-size-panel__wrapper" data="6">
+                        <div class="pixel-size-panel__pixel-6" data="6"></div>
+                    </div>
                 </div>
-              </div>
+                <!-- Tools -->
+                <ul class="upper-panel">
+                    <li class="upper-panel__item-1 upper-panel__item" id="isPen"><span>Pen</span></li>
+                    <li class="upper-panel__item-2 upper-panel__item" id="isMirrorPen"><span>Mirror Pen</span></li>
+                    <li class="upper-panel__item-3 upper-panel__item" id="isPaintBucket"><span>Paint Bucket</span></li>
+                    <li class="upper-panel__item-4 upper-panel__item" id="isPaintAll"><span>Paint all</span></li>
+                    <li class="upper-panel__item-5 upper-panel__item" id="isEraser"><span>Eraser</span></li>
+                    <li class="upper-panel__item-6 upper-panel__item" id="isLine"><span>Line</span></li>
+                    <li class="upper-panel__item-7 upper-panel__item" id="isRectangle"><span>Rectangle</span></li>
+                    <li class="upper-panel__item-8 upper-panel__item" id="isCircle"><span>Circle</span></li>
+                    <li class="upper-panel__item-9 upper-panel__item" id="isCircle"><span>Circle</span></li>
+                </ul>
+                <!-- Color -->
+                <ul class="lower-panel">
+                    <div class="color-picker"></div>
+                    <li class="lower-panel__item-1 lower-panel__item">
+                        <div class="wrapper"><span class='name'>choose color</span></div>
+                    </li>
+                    <li class="lower-panel__item-2 lower-panel__item">
+                        <div class="wrapper"><span class='name'>previous color</span></div>
+                    </li>
+                    <li class="lower-panel__item-3 lower-panel__item">
+                    </li>
+                    <input class="lower-panel__color-picker" type="color" style="display: none">
+                </ul>
             </div>
-            <div class="aside-panel__import-operating aside-panel__operating">
-              <input class="url" type="text" value="https://avatars.mds.yandex.net/get-pdb/1939052/bd5d6894-9bcb-413b-bce3-63ba28f4e159/s1200">
-              <button class="button-import-url" type="button">import</button>
-              <input class ='button-import-file' type="file">
-              <div class="radio-button-wrapper">
-                <label for="native-size"><input id="native-size" type="radio" name="import-image" checked>native
-                  size</label>
-                <label for="stretch-image"><input id="stretch-image" type="radio"
-                    name="import-image">stretch-image</label>
-                <label for="adapt-canvas"><input id="adapt-canvas" type="radio" name="import-image">adapt canvas</label>
-              </div>
+            <!-- Manipulations with frames -->
+            <div class="control-panel-frame">
+                <div class="frame-column"></div>
+                <button class="button-add-frame" type='button'>Add new frame</button>
             </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-  <script src="./js/main.js" type="module"></script>
+            <!-- Canvas -->
+            <div class="canvas-base">
+                <div class="canvas-wrapper">
+                    <canvas class="canvas-layer canvas-layer-1 canvas"></canvas>
+                    <canvas class="canvas-layer-upper canvas"></canvas>
+                </div>
+            </div>
+            <div class="control-panel-right">
+                <div class="animation-wrapper">
+                    <div class="animation-wrapper__monitor-wrapper">
+                        <img class="animation-wrapper__monitor">
+                    </div>
+                    <div class="animation-wrapper__control-panel">
+                        <span class="animation-wrapper__fps-monitor"></span>
+                        <input class="animation-wrapper__fps-slider" type="range" min="0" max="24" step="1">
+                    </div>
+                </div>
+                <!-- Manipulation with layers -->
+                <div class="layers-panel">
+                    <div class="layers-panel__control">
+                        <button class="button-add-layer" type="button"> Добивать слой</button>
+                        <button class="button-change-name" type="button">CN</button>
+                        <button class="button-up-layer" type="button">up</button>
+                        <button class="button-down-layer" type="button">down</button>
+                        <button class="button-merge-layer" type="button">MG</button>
+                        <button class="button-delete-layer" type="button">del</button>
+                    </div>
+                    <ul class="layers-panel__layers-list">
+                        <li class="list-layer-1 list-layer">layer-1</li>
+                    </ul>
+                    <!-- <button  class="button-animation" type="button">run animation</button>-->
+                </div>
+                <div class="canvas-size-wrapper">
+                    <button class='button-submit' type='button'>size:</button>
+                    <input class="canvas-width-input" type="text">
+                    <input class="canvas-height-input" type="text">
+                </div>
+                <div class="zoom-wrapper">zoom: <span class='zoom'></span></div>
+            </div>
+            <!-- Instruments: save, import -->
+            <div class="aside-panel">
+                <div class="aside-panel__main-wrapper">
+                    <div class="aside-panel__icon-wrapper">
+                        <div class="icon-background">
+                            <div class="icon icon-save"></div>
+                        </div>
+                        <div class="icon-background">
+                            <div class="icon icon-import"></div>
+                        </div>
+                        <div class="icon-background">
+                        </div>
+                    </div>
+                    <div class="aside-panel__operating-wrapper">
+                        <div class="aside-panel__save-operating aside-panel__operating">
+                            <div class="range-input-wrapper">
+                                <span>scale</span>
+                                <input class='range' type="range" min="1" max="30" step="1">
+                                <span class="multiplier"></span>
+                            </div>
+                            <div class="resolution">
+                                <div class="text">Resolution</div>
+                                <input class="width" type="text">
+                                <div class="label">x</div>
+                                <input class="height" type="text">
+                            </div>
+                            <div class="file-format-wrapper">
+                                <span class="text">Save as: </span>
+                                <input class='files-name' type="text">
+                                <div class="buttons-wrapper">
+                                    <div class="inner">
+                                        <div class="image"></div>
+                                        <button class="button-save-image" type="button">.png</button>
+                                    </div>
+                                    <div class="inner">
+                                        <div class="gif"></div>
+                                        <button class="button-save-gif" type="button">.gif</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="aside-panel__import-operating aside-panel__operating">
+                            <input class="url" type="text"
+                                value="https://avatars.mds.yandex.net/get-pdb/1939052/bd5d6894-9bcb-413b-bce3-63ba28f4e159/s1200">
+                            <button class="button-import-url" type="button">import</button>
+                            <input class='button-import-file' type="file">
+                            <div class="radio-button-wrapper">
+                                <label for="native-size"><input id="native-size" type="radio" name="import-image"
+                                        checked>native
+                                    size</label>
+                                <label for="stretch-image"><input id="stretch-image" type="radio"
+                                        name="import-image">stretch-image</label>
+                                <label for="adapt-canvas"><input id="adapt-canvas" type="radio"
+                                        name="import-image">adapt canvas</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="./js/main.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
 </body>
 
 </html>
