feat: add color-picker-tool

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                     <li class="upper-panel__item-6 upper-panel__item" id="isLine"><span>Line</span></li>
                     <li class="upper-panel__item-7 upper-panel__item" id="isRectangle"><span>Rectangle</span></li>
                     <li class="upper-panel__item-8 upper-panel__item" id="isCircle"><span>Circle</span></li>
-                    <li class="upper-panel__item-9 upper-panel__item" id="isCircle"><span>Circle</span></li>
+                    <li class="upper-panel__item-9 upper-panel__item" id="isColorPicker"><span>Color picker</span></li>
                 </ul>
                 <!-- Color -->
                 <ul class="lower-panel">
                     <div class="color-picker"></div>
                     <li class="lower-panel__item-1 lower-panel__item">
-                        <div class="wrapper"><span class='name'>choose color</span></div>
+                        <div class="wrapper"><span class='name name-1'>choose color</span></div>
                     </li>
                     <li class="lower-panel__item-2 lower-panel__item">
-                        <div class="wrapper"><span class='name'>previous color</span></div>
+                        <div class="wrapper"><span class='name name-2'>previous color</span></div>
                     </li>
                     <li class="lower-panel__item-3 lower-panel__item">
                     </li>
