feat: add circle and move tool

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>Document</title>
+    <link rel="shortcut icon" href="./img/favicon/favicon.svg">
     <link rel="stylesheet/less" href="./css/index.less">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
     <script src="./lib/less/less.min.js"></script>
@@ -54,6 +55,7 @@
                     <li class="upper-panel__item-7 upper-panel__item" id="isRectangle"><span>Rectangle</span></li>
                     <li class="upper-panel__item-8 upper-panel__item" id="isCircle"><span>Circle</span></li>
                     <li class="upper-panel__item-9 upper-panel__item" id="isColorPicker"><span>Color picker</span></li>
+                    <li class="upper-panel__item-10 upper-panel__item" id="isMove"><span>Move</span></li>
                 </ul>
                 <!-- Color -->
                 <ul class="lower-panel">
@@ -141,7 +143,7 @@
                             </div>
                             <div class="file-format-wrapper">
                                 <span class="text">Save as: </span>
-                                <input class='files-name' type="text">
+                                <input class='files-name' type="text" placeholder="Input file name...">
                                 <div class="buttons-wrapper">
                                     <div class="inner">
                                         <div class="image"></div>
